--- a/TP4latex/tp4.tex
+++ b/TP4latex/tp4.tex
@@ -478,13 +478,21 @@ Esto significa \textit{e.g.} que cuando una instrucción intenta usar un registr
 
 \textbf{Peligro MEM}
 
-\texttt{if(MEM/WB.RegWrite and (MEM/WB.RegisterRd != 0)}
+\texttt{if (MEM/WB.RegWrite \&\& (MEM/WB.RegisterRd !=  0)}
 
-\texttt{and (EX/MEM.RegisterRd = ID/EX.RegisterRs)) ForwardA = 01}
+\texttt{\&& not(EX/MEM.RegWrite \&& (EX/MEM.RegisterRd != 0)}
 
-\texttt{if(MEM/WB.RegWrite and (MEM/WB.RegisterRd != 0)}
+\texttt{\&& (EX/MEM.RegisterRd != ID/EX.RegisterRs))}
 
-\texttt{and (EX/MEM.RegisterRd = ID/EX.RegisterRt)) ForwardB = 01}
+\texttt{\&& (MEM/WB.RegisterRd = ID/EX.RegisterRs)) ForwardA = 01}
+
+\texttt{if (MEM/WB.RegWrite \&& (MEM/WB.RegisterRd !=  0)}
+
+\texttt{\&& not(EX/MEM.RegWrite \&& (EX/MEM.RegisterRd !=  0)}
+
+\texttt{\&& (EX/MEM.RegisterRd !=  ID/EX.RegisterRt))}
+
+\texttt{\&&  (MEM/WB.RegisterRd = ID/EX.RegisterRt)) ForwardB = 01}
 
 \bigskip
 
